kubernetes/traefik-backend-ingressroute.yaml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: backend-ingressroute
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`iyawatransport.com`)
      kind: Rule
      services:
        - name: backend-service
          port: 5000
  tls:
    certResolver: letsencrypt
